# dendrite-examples

./: .env.example  .gitignore  README.md  authenticate_on_instagram.py  banking_agent.py  cooking_agent.py  env.example  outlook_agent.py  pyproject.toml  requirements.txt  simple_example.py
agents/: langchain_instagram_manager.py  openai_cooking_assistant.py  openai_reddit_researcher.py
agents/langchain_competition_analysis_agent/: README.md  agent.py
agents/langchain_competition_analysis_agent/tools/: email.py  producthunt.py
agents/llama_index_github_startgazers_analyser/: agent.py
agents/openai_github_startgazers_analyser/: README.md  pyproject.toml  stargazer_agent.py
agents/swarm_autonomous_vc/: agent.py  pyproject.toml
agents/swarm_autonomous_vc/tools/: hackernews.py  linkedin.py  producthunt.py
basic_usage/async/: basic.py  yc_company_details.py
basic_usage/authentication/: auth.py
basic_usage/data_extraction/: ask_ig_dm_posts.py  ask_unread_emails.py  extract_ig_dm_posts.py  google_analytics.py  level_1_yc_companies.py  level_2_yc_companies.py  level_3_yc_companies.py  yc_companies.py  yc_companies_typing.py
basic_usage/download/: transactions.py
basic_usage/interactions/: send_email.py
basic_usage/navigation/: auth.py  basic.py  multi_page.py  several_tabs.py
basic_usage/remote_hosting/: basic.py
quickstart/: hello_world.py  hello_world_w_key.py  markdown.py
