[tool.poetry]
name = "python-examples"
version = "0.1.0"
description = "A few examples of how Dendrite can be used to set up automations as well as Web AI agents."
authors = ["charlesmaddock <charles@digitalungdom.se>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openpyxl = "^3.1.5"
openai = "^1.43.0"
anthropic = "^0.34.1"
dendrite-sdk = "^0.1.0"
poetry-plugin-export = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
