[tool.poetry]
name = "swarm-autonomous-vc"
version = "0.1.0"
description = ""
authors = ["charlesmaddock <charles@digitalungdom.se>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dendrite = "^0.2.5"
swarm = {git = "https://github.com/openai/swarm.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
